# image_detection

./: config.py  debug_single_image.py  main.py  pyproject.toml  requirements.txt
.opencode/plans/: fix_classification_issues.md
classification/: ai_classifier.py  classifier.py  decision_engine.py  feature_extractor.py  hybrid_classifier.py  local_ai_classifier.py  model_loader.py  ocr_detector.py  prompts.py
classification/ai/: ai_classifier.py  prompts.py
classification/detectors/: camera_detector.py  document_detector.py  screenshot_detector.py  ui_detector.py  wallpaper_detector.py  widget_detector.py
duplicate_detection/: __init__.py  duplicate_manager.py  phash_duplicate.py  sha256_duplicate.py
output/: processing_log.csv
output/reports/: dataset_report.csv  dataset_report.json  summary.txt
pipeline/: __init__.py  batch_processor.py  exception_handler.py  image_pipeline.py  progress_tracker.py
preprocessing/: image_loader.py  validator.py
quality/: __init__.py  blur_detector.py  exposure_detector.py  noise_detector.py  resolution_detector.py
reports/: exporter.py  report_generator.py  statistics.py
utils/: __init__.py  file_manager.py  file_utils.py  folder_manager.py  logger.py  report_generator.py
