[project]
name = "image-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Janvi16-creater",email = "janviparmar1612@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy (>=2.5.0,<3.0.0)",
    "torch (==2.7.1)",
    "torchvision (==0.22.1)",
    "transformers (>=5.12.1,<6.0.0)",
    "pillow (>=12.3.0,<13.0.0)",
    "opencv-python (>=5.0.0.93,<6.0.0.0)",
    "imagehash (>=4.3.2,<5.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "tqdm (>=4.68.3,<5.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "faiss-cpu (>=1.14.3,<2.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "protobuf (>=7.35.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false